# User-Manager-API

./: Insomnia.har  README.md  pyproject.toml  users.db
app/: main.py
app/server/: app.py  config.py  security.py
app/server/db/: database.py
app/server/routes/: admin_routes.py  auth_rotes.py  user_routes.py
app/server/schema/: user_schema.py
